Update and rename Generators.md to 3.Generators.md

--- a/3.Generators.md
+++ b/3.Generators.md
@@ -1,8 +1,8 @@
 php 5.5之后引入了 generators。
 
-不像标准的php迭代器，generators不仅不需要你实现繁重的迭代器接口，而且还能按需求值，提高了性能，特别是在数据量大的时候。
+与 php传统的迭代器不同，generators不仅不需要你实现繁重的迭代器接口，而且还能按需求值，提高性能，特别是在数据量大的时候。
 
-generators 也并非灵丹妙药。除非你调用，否则它并不知道下一次迭代的值。并且整体只能迭代一次。
+generators 也并非灵丹妙药。除非你调用，否则它并不知道下一次迭代的值。并且整体只能迭代一次（需要重新迭代则必须重建generators）。
 
 Example:
 
@@ -15,7 +15,7 @@ function myGenerator() {
 }
 ```
 
-调用该迭代器函数，php将返回一个与之关联的对象。
+调用该迭代器函数，php将返回一个与之关联的对象（建立了generators）。
 
 该对象可被foreach之类的函数迭代，每次迭代 generators 将提供一个具体的值（停留在下一个 yield 之前）。
 
