Update and rename Closures.md to 4.Closures.md

--- a/4.Closures.md
+++ b/4.Closures.md
@@ -45,6 +45,11 @@ $example("hello"); // "hello world"
 ?>
 ```
 
-闭包和匿名函数（其实就是没定义名字的函数）其实是不同的东西，但在PHP里他们是一样的。
+闭包和匿名函数（其实就是没定义名字的函数）是不同的东西，但在PHP里他们是一样的。
 
-匿名函数赋值给变量后，创建了closure对象(每个闭包都是一个 closure 对象实例)，其实现了 invoke 魔术方法，所以可以通过直接调用变量名来调用该匿名函数。
+匿名函数赋值给变量后，创建了closure对象(每个闭包都是一个 closure 对象实例)，
+
+其实现了 invoke 魔术方法，所以可以通过直接调用变量名来调用该匿名函数。
+
+[js与php闭包对比](http://stackoverflow.com/questions/7417430/javascript-closures-vs-php-closures-whats-the-difference)
+
