Update and rename BestPractices.md to 9.BestPractices.md

--- a/9.BestPractices.md
+++ b/9.BestPractices.md
@@ -1,6 +1,6 @@
 # 过滤，验证与转义
 
-任何用户数据都是不可信的。主要是以下几个来源
+任何用户数据都是不可信的。获取用户信息主要是以下几个来源
 
 * `$_GET`
 * `$_POST`
@@ -26,7 +26,9 @@ $input = '<p><script>alert("You won the Nigerian lottery!");</script></p>';
 echo htmlentities($input, ENT_QUOTES, 'UTF-8');
 ```
 
-过滤html输入，[HTML Purifier](http://htmlpurifier.org/) 是更好的选择。一些php模版引擎会自动完成过滤工作
+过滤html输入，[HTML Purifier](http://htmlpurifier.org/) 是更好的选择。
+
+一些php模版引擎也会自动完成过滤工作，如 [Twig](http://twig.sensiolabs.org/) , [Blade](http://daylerees.com/codebright/blade) 。
 
 不要自己写正则来过滤，正则又复杂又慢，html输入不一定是规范的，这一方法有很大的安全隐患。
 
@@ -42,7 +44,7 @@ $sql = sprintf(
 );
 ```
 
-直接使用字符串作为语句简直就是灾难，直接一个伪造请求就能改掉用户密码。
+直接使用字符串拼接作为sql语句简直就是灾难，直接一个伪造请求就能改掉用户密码。
 
 ```php
 # POST /user?id=1 HTTP/1.1
@@ -108,9 +110,9 @@ if ($isEmail !== false) {
 * 绝不明文存储
 * 不通过邮件发送密码（一旦发送表示网站明文存储并且能读取用户密码），使用带有效时间并且需要验证的token附带在url中发送来代替发送密码。
 * 使用 bcrypt 加密密码
-* 尽可能使用 Password Hashing API(如无法使用 php 5.5 以上，可以使用 [password-compat](https://packagist.org/packages/ircmaxell/password-compat) )
+* 尽可能使用 Password Hashing API(若无法使用 php 5.5 以上，可以使用 [password-compat](https://packagist.org/packages/ircmaxell/password-compat) )
 
-## 用户注册
+## 用户注册流程
 
 请求：
 
@@ -166,7 +168,7 @@ try{
 
 密码字段推荐 `varchar(255)`
 
-## 用户登陆
+## 用户登陆流程
 
 请求：
 
@@ -387,6 +389,8 @@ if ($uresult) {
 ?>
 ```
 
+[Buffered and Unbuffered queries](http://php.net/manual/zh/mysqlinfo.concepts.buffering.php)
+
 [其他的FETCH_STYLE](http://php.net/manual/zh/pdostatement.fetch.php)
 
 ```php
@@ -477,7 +481,7 @@ $pdo->commit();
 
 # 多字节字符串处理
 
-除英文外的大部分语言都无法仅用一个字节来表示。主流大多数使用 UTF-8 编码。
+除英文外的大部分语言都无法仅用一个字节来表示。目前主流使用 UTF-8 编码。
 
 使用 [mbstring](http://php.net/manual/book.mbstring.php) 来处理多字节字符串。
 
@@ -495,7 +499,7 @@ header('Content-Type: application/json;charset=utf-8');
 
 # 流（Streams）
 
-即使 php 4.3 之后就引入了 streams，但可以说这一特性是使用人数最少的之一。
+即使 php 4.3 之后就引入了 streams，但可以说这一特性是使用人数最少的特性之一，但它却非常好用。
 
 streams 是用来在源与目的之间传输数据的，仅此而已。源可以是文件，进程，网络连接，zip压缩包，标准输入输出等等资源，只要其被 stream wrappers 封装成统一的接口。
 
@@ -606,7 +610,7 @@ fclose($handle);
 
 # 错误与异常
 
-可以使用 `@` 操作符来抑制错误提示，但这个极度不推荐的。正确的做法是用 `try{}catch{}` 和 `throw` 处理和抛出异常。
+可以使用 `@` 操作符来抑制错误提示，但这个极度不推荐的。正确的做法是用 `TryCatch` 和 `Throw` 处理和抛出异常。
 
 ## 异常
 
